apps/k8s/admin-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
  namespace: admin-api
  
  # 클러스터 내에서는 namespace로 자원을 구별한다고 한다.
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec: 
      containers:
        - name: admin-api
          image: ghcr.io/skkuding/codedang-admin-api:latest
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
            requests:
              cpu: 1
              memory: 1.5Gi
