apps/k8s/admin-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-api-server
  namespace: admin-api
spec:
  selector:
    app: admin-api
  ports:
    - port: 4000
      targetPort: 4000
