apps/k8s/admin-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-api-server-ingress
  namespace: admin-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - test-k8s.codedang.com
      secretName: admin-api-server-tls
  rules:
    - host: test-k8s.codedang.com
      http:
        paths:
          - path: /         #???????
            pathType: Prefix
            backend:
              service:
                name: admin-api-server
                port:
                  number: 4000
